# mkr_6d_registration

./: README.md
Program/: CMakeLists.txt  DIFT.kdev4  main.cpp
Program/data/: kp1.pcd  kp2.pcd  output.pcd  reg.pcd
